# Progetto_Aspromonte

./: .gitignore  CMakeLists.txt  README.md  ipc_with_yolo26.py  ipc_with_yolo5.py  main.cpp
